<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.studyline.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_own_post"
        android:name="com.example.studyline.ui.OwnPost.OwnPost"
        android:label="@string/menu_own_publications"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.studyline.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/createPostFragment"
        android:name="com.example.studyline.ui.home.CreatePostFragment"
        android:label="Crear Publicación"
        tools:layout="@layout/fragment_create_post" />
    <action
        android:id="@+id/action_global_createPostFragment"
        app:destination="@id/createPostFragment" />

</navigation>