<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/post_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Materia y Fecha -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/postSubject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="sans-serif"
                android:paddingVertical="4dp"
                android:textSize="15sp"
                android:text="@string/post_subject"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/postDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="4dp"
                android:text="@string/post_date"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <!-- Descripción -->
        <TextView
            android:id="@+id/postDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="15sp"
            android:text="@string/post_description" />

        <!-- Interacciones: Comentarios, Likes, y Dislikes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/postCountLike"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:text="@string/num_likes"
                android:gravity="center" />

            <!-- Likes -->
            <ImageView
                android:id="@+id/btnLike"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="Like"
                android:src="@drawable/icon_like" />

            <TextView
                android:id="@+id/postCountDislike"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:text="@string/num_dislikes"
                android:gravity="center" />

            <!-- Dislikes -->
            <ImageView
                android:id="@+id/btnDislike"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="Dislike"
                android:src="@drawable/icon_dislike" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
