<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/post_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Materia y Fecha -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/postSubject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="sans-serif"
                android:paddingVertical="4dp"
                android:textSize="15sp"
                android:text="@string/post_subject"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/postDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="4dp"
                android:text="@string/post_date"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <!-- Descripción -->
        <TextView
            android:id="@+id/postDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="15sp"
            android:text="@string/post_description" />

        <!-- Interacciones: Comentarios, Likes, y Dislikes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:gravity="center_horizontal">

            <!-- Likes -->

            <ImageView
                android:id="@+id/btnEdit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="Edit"
                android:src="@drawable/icon_edit" />

            <ImageView
                android:id="@+id/btnDelete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="Delete"
                android:src="@drawable/icon_delete"
                android:layout_marginStart="16dp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
